--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+@font-face{
+  font-family: "Aniron" ;
+  src: url("./font/anirb___.ttf") ;
+}
 body {
   height: 100vh;
   width: 100vw;
@@ -9,15 +13,17 @@ body {
   background-position: center;
   }
 .titre {
-  height: 50vh;
-  width: 75vw;
+  height: 10vh;
+  width: 90vw;
   margin: 0;
+  margin-top: 3vh;
   padding: 0;
   font-weight: 900;
-  font-size: 5rem;
+  font-size: 4.5rem;
+  font-family: Aniron ;
   color: #FFD456;
   display: flex;
-  justify-content: center;
+  justify-content: end;
   }
   .titre1{
    margin-top: 1vh;
@@ -25,7 +31,8 @@ body {
     justify-content: center;
     align-items: center;
     font-weight: 900;
-    font-size: 1.8rem;
+    font-size: 1.3rem;
+    font-family: Aniron;
     color: #FFD456;
   }
   .titre2{
@@ -34,12 +41,13 @@ body {
     justify-content: center;
     align-items: center;
     font-weight: 900;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+    font-family: Aniron;
     color: #FFD456;
 
   }
 .haut{
-  height:50vh ;
+  height:40vh ;
   width:100vw ;
   display: flex;
   justify-content: space-between;
@@ -87,8 +95,68 @@ body {
   background-size: cover;
   background-position: center;
 }
+.lesda1 .lesda2 .lesda3 {
+    display: none;
+  }
+  .lesda:hover .imgsda{
+    display: none;
+  }
+  .lesda1 .lesda2 .lesda3:hover {
+    display: block;
+  }
+  .imgsda-container {
+    position: relative;
+  }
+  
 
-
+@media screen and (min-width: 800px) and (max-width: 1181px){
+body{
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+.titre {
+  font-size: 3.5rem;
+  }
+  .imgsda{
+    height: 25vh;
+    width: 35vw;
+    }
+  }
+  @media screen and (max-width: 801px){
+    body{
+      height: 100vh;
+      width: 100vw;
+      margin: 0;
+    }
+    .titre {
+      height: 10vh;
+      width: 100vw;
+      font-size: 1.5rem;
+      display: flex;
+      justify-content: center;
+      }
+      .imgsda{
+        height: 20vh;
+        width: 35vw;
+        }
+        .haut{
+          height:25vh ;
+          width:100vw ;
+          display: flex;
+          justify-content:center;
+          }
+          .bas{
+            height:75vh ;
+            width:100vw ;
+            display: flex;
+            flex-direction: column
+            }
+            .lesda{
+              height: 25vh;
+              width: 100vw;
+            }
+  }
 
 
 /* .lesda1 .lesda2 .lesda3 {
