--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,23 @@ body {
   background-size: cover;
   background-position: center;
 }
+.film{
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  background-image:url('../images/image\ 188.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.bas{
+  height:65vh ;
+  width:100vw ;
+  display: flex;
+  justify-content: space-around;
+  align-items: end;
+}
+
 .titre {
   height: 15vh;
   width: 100vw;
@@ -26,6 +43,14 @@ body {
   justify-content: center;
   align-items: center;
 }
+.filmlca{
+  height: 85vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .texte{
   height: 10vh;
   width: 100vw;
@@ -50,13 +75,7 @@ body {
   font-family: Aniron ;
   color:white;
 }
-.bas{
-  height:70vh ;
-  width:100vw ;
-  display: flex;
-  justify-content: space-around;
-  align-items: end;
-}
+
 .lesda{
   height: 25vh;
   display: flex;
@@ -64,22 +83,23 @@ body {
   align-items: center;
 }
 .imgsda{
-  height: 25vh;
+  height: 23vh;
 }
 .lesda1{
   position: relative;
 }
 .img2{
-  height: 25vh;
+  height: 23vh;
   display: none;
 }
+
 .titre1{
   display: none;
   position:absolute; 
-  top: 0;
+  top: -10%;
   left: 0;
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-family: Aniron;
   color: #FFD456;
   text-align: center;
@@ -87,10 +107,10 @@ body {
 .titre11{
   display: none;
   position:absolute; 
-  top: 0;
-  left: 13%;
+  top: -10%;
+  left:8%;
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-family: Aniron;
   color: #FFD456;
   text-align: center;
@@ -100,12 +120,114 @@ body {
   position:absolute; 
   top: 45%;
   margin: 0;
-  left: 2%;
+  right: 2%;
   text-align: center;
-  font-size: 0.7rem;
+  font-size: 0.6rem;
   font-family: Aniron;
   color: #FFD456;
 }
+
+/* Caroussel*/
+#caroussel{
+  width: 65vw;
+  height: 55vh;
+  border: solid 4px #fff;
+  box-shadow: 10px 10px 400px 74px rgba(0,0,0,1);
+  -webkit-box-shadow: 10px 10px 400px 74px rgba(0,0,0,1);
+  -moz-box-shadow: 10px 10px 400px 74px rgba(0,0,0,1);
+  position: relative;
+  overflow: hidden;
+}
+#container{
+  width: 65vw;
+  height: 55vh;
+}
+.lca{
+  width: 65vw;
+  height: 55vh;
+  margin: 0;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.fleche{
+  position: absolute;
+  width: 4vw;
+  cursor:pointer;
+  top: 35%;
+}
+
+
+#g{
+  left: 0;
+  opacity: 0.4;
+  transform:rotate(0deg);
+  transition:all 0.3s ease;
+}
+#d{
+  right: 0;
+  opacity: 0.4;
+  transform:rotate(180deg);
+  transition:all 0.3s ease;
+}
+#g:hover{
+  transform:rotate(0deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+#d:hover{
+  transform:rotate(180deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+
+#ga{
+  left: 0;
+  opacity: 0.4;
+  transform:rotate(0deg);
+  transition:all 0.3s ease;
+}
+#dr{
+  right: 0;
+  opacity: 0.4;
+  transform:rotate(180deg);
+  transition:all 0.3s ease;
+}
+#ga:hover{
+  transform:rotate(0deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+#dr:hover{
+  transform:rotate(180deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+
+#gau{
+  left: 0;
+  opacity: 0.4;
+  transform:rotate(0deg);
+  transition:all 0.3s ease;
+}
+#dro{
+  right: 0;
+  opacity: 0.4;
+  transform:rotate(180deg);
+  transition:all 0.3s ease;
+}
+#gau:hover{
+  transform:rotate(0deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+#dro:hover{
+  transform:rotate(180deg) scale(1.1);
+  opacity:1;
+  transition:all 0.3s ease;
+}
+
 
 /* Hover */
 .lesda:hover .imgsda{
@@ -113,15 +235,20 @@ body {
 }
 .lesda:hover .img2{
   display: block;
+  transform: scale(1.3);
 }
 .lesda:hover .titre1{
   display: block;
+  transform: scale(1.3);
+
 }
 .lesda:hover .titre11{
   display: block;
+  transform: scale(1.3);
 }
 .lesda:hover .titre2{
   display: block;
+  transform: scale(1.3);
 }
 .texte:hover .accroche{
   display: none;
@@ -130,7 +257,7 @@ body {
   display: block;
 }
 
-/* Tablette */
+/* Format tablette */
 @media screen and (min-width: 581px) and (max-width: 1180px){
 
 .titre {
@@ -143,22 +270,23 @@ body {
   font-size: 1rem;
 }
 .imgsda{
-  height: 15vh;
+  height: 18vh;
 }
 .img2{
-  height: 15vh;
+  height: 18vh;
 }
 .titre1{
   font-size: 0.5rem; 
 }
  .titre11{
   font-size: 0.5rem;
+  left: 10%;
 }
  .titre2{
   font-size: 0.4rem;
 }
 }
-/* Télephone */
+/* Format télephone */
 @media screen and (max-width: 580px){
 
 .titre {
