--- a/style.css
+++ b/style.css
@@ -178,7 +178,7 @@ body {
   display: inline-block;
   background-repeat: no-repeat;
   background-position:center;
-  background-size: contain; 
+  background-size: cover; 
 }
 .fleche{
   position: absolute;
