--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
-  background-image:url('../images/image\ 188.png');
+  background-image:url(images/image\ 188.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
